--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  background-color: #000;
+  background-color: #0f0f0f;
   z-index: 2;
 }
 
@@ -95,9 +95,14 @@
 
 .message-footer {
   display: flex;
-  justify-content: center;
   margin-top: 4px;
   font-size: 0.7rem;
+  justify-content: flex-end;
+}
+
+.message-wrapper:not(.own) .message-footer {
+  justify-content: flex-start;
+  margin-left: 10vw;
 }
 
 .message-time {
