--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -85,12 +85,14 @@
 .message.sent {
   background-color: #9c27b0;
   color: white;
+  border-radius: 18px 18px 5px 18px;
 }
 
 .message.received {
   background-color: #333;
   color: white;
   margin-left: 40px;
+  border-radius: 18px 18px 18px 5px;
 }
 
 .message-footer {
@@ -133,7 +135,7 @@
   background-color: var(--secondary-bg);
   padding: 0.5rem;
   margin: 0.75rem;
-  border-radius: 24px;
+  border-radius: 50px;
 }
 
 .input-field {
@@ -170,15 +172,35 @@
 }
 
 .send-button {
-  background-color: #9c27b0;
+  background-color: #e91e63;
+  padding: 0px;
+}
+.send-icon {
+  width: 20px;
+  height: 20px;
 }
 .start-button {
-  background-color: #9c27b0;
+  background-color: #e91e63;
+  border-radius: 50px;
+  align-self: center;
+  margin-top: 3vh;
 }
 .input-button:hover {
   opacity: 0.9;
 }
-
+.id-selection-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.id-input-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+  width: 100%;
+  padding: 1rem;
+}
 @keyframes dissolve {
   0% {
     opacity: 1;
