--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -130,9 +130,12 @@ body {
   border: none;
   border-radius: 50px;
   padding: 0.75rem 0;
-  width: 100%;
+  width: 50%;
   font-size: 1rem;
   font-weight: 600;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
   cursor: pointer;
 }
 
