Changed UI colors

--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -83,7 +83,7 @@
 }
 
 .message.sent {
-  background-color: #9c27b0;
+  background-color: #e91e63;
   color: white;
   border-radius: 18px 18px 5px 18px;
 }
