--- a/src/styles/Call.css
+++ b/src/styles/Call.css
@@ -206,15 +206,17 @@
 .appbar-left h1 {
   margin: 0;
 }
-
-.appbar-right {
+.appbar-right h1 {
+  margin: 0;
+}
+/* .appbar-right {
   margin-left: 15px;
   background-color: transparent;
   padding: 5px 10px;
   color: white;
   cursor: pointer;
   align-self: 'center';
-}
+} */
 
 .appbar-right button:hover {
   background-color: rgba(255, 255, 255, 0.1);
